# pyrebox

./: .gitignore  .gitmodules  .pyrebox-i386  .pyrebox-x86_64  BUILD.rst  Dockerfile  Makefile  README.rst  build.sh  pyrebox-i386  pyrebox-x86_64  pyrebox.conf.Win7SP0x64  pyrebox.conf.WinXPSP3x86  requirements.txt  run.py  start_i386.sh  start_x86_64.sh
LICENSE.md/: LICENSE.md
autorun/: autorun.py
docs/: Makefile  api.rst  conf.py  guest_agent.rst  index.rst  interactive.rst  mw_monitor.rst  quickstart.rst  scripting.rst
exploit_detect/: mem_info.py  shadow_stack.py  shellcode_detect.py  stack_shift.py  trigger_block_begin_shellcode_detect.cpp  trigger_block_end_stack_shift.cpp  trigger_shadow_stack.cpp
generic_unpacker/: generic_unpacker.py  memory_dump.py
guest/include/: host_opcodes.h
guest/linux/: Makefile  README.rst  configure_offsets.sh  guest_agent.c  guest_agent.h  test.c
guest/win/: Makefile  README.rst  configure_offsets.sh  guest_agent.c  test.c
guest/win/libseh/: COPYING  (+5 more)
mw_monitor/: DeviareDbParser.py  README.rst  api_tracer.py  coverage.py  dumper.py  interproc.py  mw_monitor.py  mw_monitor_classes.py  mw_monitor_logging.py
mw_monitor/config_examples/: mw_monitor.conf  mw_monitor_run.json
mw_monitor/ida_scripts/: coverage_reader_32.py
mw_monitor2/: api_tracer.py  config_example.conf  core.py  coverage.py  deviare_db_parser.py  generic_unpacker.py  generic_unpacker_plugin.py  interproc.py  interproc_callbacks.py  memory_dump.py  populate_db.py  trigger_jmp_call_ret_tracer.cpp  vads.py
mw_monitor2/ida_scripts/: coverage_reader_64.py  mw_monitor_binary_log_reader.py  mw_monitor_coverage.py  mw_monitor_ida_functions_rename.py
plugins/: automated_mouse_movements.py  guest_agent.py
pyrebox/: Makefile.objs  api.cpp  api.h  api.py  api_internal.py  callbacks.cpp  callbacks.h  cpus.py  init.py  ipython_shell.py  linux_vmi.cpp  linux_vmi.h  linux_vmi.py  linux_vmi_config.h  process_mgr.cpp  process_mgr.h  pyrebox.c  pyrebox.h  qemu_commands.c  qemu_commands.h  qemu_commands_defs.h  qemu_glue.c  qemu_glue.h  qemu_glue_block.h  qemu_glue_callbacks.c  qemu_glue_callbacks.h  qemu_glue_callbacks_flush.h  qemu_glue_callbacks_memory.h  qemu_glue_callbacks_needed.h  qemu_glue_callbacks_target_independent.h  qemu_glue_callbacks_tlb.h  qemu_glue_gdbstub.c  qemu_glue_gdbstub.h  qemu_glue_sleuthkit.c  qemu_glue_sleuthkit.h  qemu_glue_sleuthkit_internal.h  qemu_glue_ui.h  r2.py  sleuthkit  trigger_helpers.cpp  (+11 more)
pyrebox_test/: test_0_vmi_create_proc.py  test_10_block_end.py  test_11_insn_end.py  test_12_load_remove_module.py  test_1_block_begin.py  test_2_opt_block_begin.py  test_3_opt_insn_begin.py  test_4_mem_write.py  test_5_mem_read.py  test_6_keystroke.py  test_7_nic_test.py  test_8_opcode_range.py  test_9_tlb_and_context_change.py
qemu/: Makefile.target  blockdev.c  configure  cpu-exec.c  cputlb.c  diffs_pyrebox  hmp-commands.hx  hmp.c  pyrebox  qemu-options.hx  softmmu_template.h  translate-all.c  vl.c
qemu/chardev/: char-fd.c
qemu/migration/: migration.c
qemu/scripts/: git-submodule.sh
qemu/slirp/libslirp/: COPYING  LICENSE  Makefile.am  README.md  configure.ac
qemu/slirp/libslirp/include/: qemu-common.h
qemu/slirp/libslirp/include/qemu/: osdep.h
qemu/slirp/libslirp/man/: Makefile.am
qemu/slirp/libslirp/src/: Makefile.am  libslirp.c  qemu2libslirp.c  qemu2libslirp.h  slirp.h  tcp_subr.c  timerfd.c  timerfd.h  unixfwd.c  unixfwd.h
qemu/slirp/libslirp/src/include/: Makefile.am  libslirp.h
radare2/: rap.py
scripts/: bp_range_test.py  getset_var_example.py  mem_write_breakpoint_test.py  mem_write_test.py  page_write_execute_trigger.py  script_example.py  script_example_min.py  script_template.py  volatility_example.py
triggers/: trigger_block_user_only_coverage.cpp  trigger_blockbegin_wx.cpp  trigger_bp_memrange.cpp  trigger_bpr_memrange.cpp  trigger_bprh_memrange.cpp  trigger_bpw_memrange.cpp  trigger_bpwh_memrange.cpp  trigger_getset_var_example.cpp  trigger_memwrite_wx.cpp  trigger_opcode_user_only.cpp  trigger_template.cpp  trigger_tlb_to_cr3.cpp  trigger_user_only.cpp
(+66 files in other folders)
