man_MANS = libslirp.3 libslirpfwd.3 libslirpcfg.3

install-data-hook:
	ln -sf libslirp.3 $(DESTDIR)$(man3dir)/slirp_open.3
	ln -sf libslirp.3 $(DESTDIR)$(man3dir)/slirp_start.3
	ln -sf libslirp.3 $(DESTDIR)$(man3dir)/slirp_send.3
	ln -sf libslirp.3 $(DESTDIR)$(man3dir)/slirp_recv.3
	ln -sf libslirp.3 $(DESTDIR)$(man3dir)/slirp_fd.3
	ln -sf libslirp.3 $(DESTDIR)$(man3dir)/slirp_close.3
	ln -sf libslirpfwd.3 $(DESTDIR)$(man3dir)/slirp_add_fwd.3
	ln -sf libslirpfwd.3 $(DESTDIR)$(man3dir)/slirp_remove_fwd.3
	ln -sf libslirpfwd.3 $(DESTDIR)$(man3dir)/slirp_add_unixfwd.3
	ln -sf libslirpfwd.3 $(DESTDIR)$(man3dir)/slirp_remove_unixfwd.3
	ln -sf libslirpfwd.3 $(DESTDIR)$(man3dir)/slirp_add_cmdexec.3
	ln -sf libslirpcfg.3 $(DESTDIR)$(man3dir)/slirp_set_addr.3
	ln -sf libslirpcfg.3 $(DESTDIR)$(man3dir)/slirp_set_addr6.3
	ln -sf libslirpcfg.3 $(DESTDIR)$(man3dir)/slirp_set_hostname.3
	ln -sf libslirpcfg.3 $(DESTDIR)$(man3dir)/slirp_set_tftppath.3
	ln -sf libslirpcfg.3 $(DESTDIR)$(man3dir)/slirp_set_bootfile.3
	ln -sf libslirpcfg.3 $(DESTDIR)$(man3dir)/slirp_set_dhcp.3
	ln -sf libslirpcfg.3 $(DESTDIR)$(man3dir)/slirp_set_dnsaddr.3
	ln -sf libslirpcfg.3 $(DESTDIR)$(man3dir)/slirp_set_dnsaddr6.3
	ln -sf libslirpcfg.3 $(DESTDIR)$(man3dir)/slirp_set_vdnssearch.3


uninstall-hook:
	rm -f $(DESTDIR)$(man3dir)/slirp_open.3
	rm -f $(DESTDIR)$(man3dir)/slirp_start.3
	rm -f $(DESTDIR)$(man3dir)/slirp_send.3
	rm -f $(DESTDIR)$(man3dir)/slirp_recv.3
	rm -f $(DESTDIR)$(man3dir)/slirp_fd.3
	rm -f $(DESTDIR)$(man3dir)/slirp_close.3
	rm -f $(DESTDIR)$(man3dir)/slirp_add_fwd.3
	rm -f $(DESTDIR)$(man3dir)/slirp_remove_fwd.3
	rm -f $(DESTDIR)$(man3dir)/slirp_add_unixfwd.3
	rm -f $(DESTDIR)$(man3dir)/slirp_remove_unixfwd.3
	rm -f $(DESTDIR)$(man3dir)/slirp_add_cmdexec.3
	rm -f $(DESTDIR)$(man3dir)/slirp_set_addr.3
	rm -f $(DESTDIR)$(man3dir)/slirp_set_addr6.3
	rm -f $(DESTDIR)$(man3dir)/slirp_set_hostname.3
	rm -f $(DESTDIR)$(man3dir)/slirp_set_tftppath.3
	rm -f $(DESTDIR)$(man3dir)/slirp_set_bootfile.3
	rm -f $(DESTDIR)$(man3dir)/slirp_set_dhcp.3
	rm -f $(DESTDIR)$(man3dir)/slirp_set_dnsaddr.3
	rm -f $(DESTDIR)$(man3dir)/slirp_set_dnsaddr6.3
